[project]
name = "pyBCV"
version = "1.0.7"
authors = [
  { name="Francisco Griman", email="grihardware@gmail.com" }
]
description = "PyBCV es una librería desarrollada en el lenguaje de programación Python que se utiliza para recopilar los precios de los tipos de cambio y las tasas informativas proporcionados por el Banco Central de Venezuela (BCV)."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["bcv","analysis","precios","tasascambio","divisas","pybcv","venezuela"]
dependencies = [
  "requests",
  "bs4",
  "beautifulsoup4"
]

[project.urls]
"Homepage" = "https://github.com/fcoagz/pyBCV"
"Bug Tracker" = "https://github.com/fcoagz/pyBCV/issues"